--- a/NEWS
+++ b/NEWS
@@ -112,6 +112,10 @@ PHP                                                                        NEWS
     set to null). (Anatoliy)
   . Changed php://fd to be available only for CLI.
 
+- PDO:
+  . Fixed bug #61755 (A parsing bug in the prepared statements can lead to
+    access violations). (Johannes)
+
 - Phar:
   . Fix bug #61065 (Secunia SA44335, CVE-2012-2386). (Rasmus)
 
