--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.4.5
 
 - Core:
+  . Fixed bug #62357 (compile failure: (S) Arguments missing for built-in
+    function __memcmp). (Laruence)
   . Fixed bug #61998 (Using traits with method aliases appears to result in
     crash during execution). (Dmitry)
   . Fixed bug #51094 (parse_ini_file() with INI_SCANNER_RAW cuts a value that
