--- a/NEWS
+++ b/NEWS
@@ -69,7 +69,7 @@ PHP                                                                        NEWS
 - Zip:
   . Upgraded libzip to 0.10.1 (Anatoliy)
 
-?? ??? 2012, PHP 5.4.4
+14 Jun 2012, PHP 5.4.4
 
 - COM:
   . Fixed bug #62146 com_dotnet cannot be built shared. (Johannes)
