Fixed bug #62433 (Inconsistent behavior of RecursiveDirectoryIterator to dot files).

--- a/NEWS
+++ b/NEWS
@@ -76,6 +76,8 @@ PHP                                                                        NEWS
   . Fixed bug #62025 (__ss_family was changed on AIX 5.3). (Felipe)
     
 - SPL:
+  . Fixed bug #62433 (Inconsistent behavior of RecursiveDirectoryIterator to
+    dot files). (Laruence)
   . Fixed bug #62262 (RecursiveArrayIterator does not implement Countable).
     (Nikita Popov)
 
