--- a/NEWS
+++ b/NEWS
@@ -2,11 +2,15 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2012, PHP 5.4.6
 
-- SimpleXML:
-  . Implemented FR #55218 Get namespaces from current node. (Lonny)
+- CURL:
+  . Fixed bug #62499 (curl_setopt($ch, CURLOPT_COOKIEFILE, "") returns false).
+    (r.hampartsumyan@gmail.com, Laruence)
 
 - DateTime:
   . Fixed Bug #62500 (Segfault in DateInterval class when extended). (Laruence)
+
+- SimpleXML:
+  . Implemented FR #55218 Get namespaces from current node. (Lonny)
 
 ?? ??? 2012, PHP 5.4.5
 
