--- a/NEWS
+++ b/NEWS
@@ -2,12 +2,20 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2012, PHP 5.4.6
 
+- Core:
+  . Fixed bug #62565 (Crashes due non-initialized internal properties_table).
+    (Felipe)
+
 - CURL:
   . Fixed bug #62499 (curl_setopt($ch, CURLOPT_COOKIEFILE, "") returns false).
     (r.hampartsumyan@gmail.com, Laruence)
 
 - DateTime:
   . Fixed Bug #62500 (Segfault in DateInterval class when extended). (Laruence)
+  
+- Intl:
+  . Fixed bug #62564 (Extending MessageFormatter and adding property causes 
+    crash). (Felipe)
 
 - SimpleXML:
   . Implemented FR #55218 Get namespaces from current node. (Lonny)
