--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.4.6
 
 - Core:
+  . Fixed bug in number_format() when the number was not finite. See pull
+    request #134. (Reeze Xia)
   . Fixed bug #62565 (Crashes due non-initialized internal properties_table).
     (Felipe)
 
@@ -22,7 +24,7 @@ PHP                                                                        NEWS
     crash). (Felipe)
 
 - Reflection:
-  . Implemented FR ##61602 (Allow access to name of constant used as default 
+  . Implemented FR #61602 (Allow access to name of constant used as default 
     value). (reeze.xia@gmail.com)
   
 - SimpleXML:
