--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,9 @@ PHP                                                                        NEWS
   . Fixed bug #62564 (Extending MessageFormatter and adding property causes 
     crash). (Felipe)
 
+- MySQLnd:
+  . Fixed bug #62594 (segfault in mysqlnd_res_meta::set_mode). (Laruence)
+
 - Reflection:
   . Implemented FR #61602 (Allow access to name of constant used as default 
     value). (reeze.xia@gmail.com)
