--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,10 @@ PHP                                                                        NEWS
 - MySQLnd:
   . Fixed bug #62594 (segfault in mysqlnd_res_meta::set_mode). (Laruence)
 
+- readline:
+  . Fixed bug #62612 (readline extension compilation fails with
+    sapi/cli/cli.h: No such file). (Johannes)
+
 - Reflection:
   . Implemented FR #61602 (Allow access to name of constant used as default 
     value). (reeze.xia@gmail.com)
