--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+?? ??? 2012, PHP 5.4.7
+
+- Reflection:
+  . Fixed bug #62715 (ReflectionParameter::isDefaultValueAvailable() wrong
+    result). (Laruence)
+
 ?? ??? 2012, PHP 5.4.6
 
 - CLI Server:
@@ -39,8 +45,6 @@ PHP                                                                        NEWS
     sapi/cli/cli.h: No such file). (Johannes)
 
 - Reflection:
-  . Fixed bug #62715 (ReflectionParameter::isDefaultValueAvailable() wrong
-    result). (Laruence)
   . Implemented FR #61602 (Allow access to name of constant used as default 
     value). (reeze.xia@gmail.com)
   
