--- a/NEWS
+++ b/NEWS
@@ -13,7 +13,10 @@ PHP                                                                        NEWS
     (r.hampartsumyan@gmail.com, Laruence)
 
 - DateTime:
-  . Fixed Bug #62500 (Segfault in DateInterval class when extended). (Laruence)
+  . Fixed bug #62500 (Segfault in DateInterval class when extended). (Laruence)
+
+- PDO:
+  . Fixed bug #62685 (Wrong return datatype in PDO::inTransaction()). (Laruence)
 
 - Reflection:
   . Fixed bug #62715 (ReflectionParameter::isDefaultValueAvailable() wrong
