Fixed bug #62744 (dangling pointers made by zend_disable_class)
the test will be added while commit the fix for #62737

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.3.16
 
 - Core:
+  . Fixed bug #62744 (dangling pointers made by zend_disable_class). (Laruence)
   . Fixed bug #62716 (munmap() is called with the incorrect length). 
     (slangley@google.com)
   . Fixed bug #60194 (--with-zend-multibyte and --enable-debug reports LEAK
