--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? 2012, PHP 5.3.16
+16 Aug 2012, PHP 5.3.16
 
 - Core:
   . Fixed bug #60194 (--with-zend-multibyte and --enable-debug reports LEAK
