--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,10 @@ PHP                                                                        NEWS
   . Fixed bug (segfault due to PS(mod_user_implemented) not be reseted 
     when close handler call exit). (Laruence)
 
+- Standard:
+  . Fixed bug #62836 (Seg fault or broken object references on unserialize()).
+    (Laruence)
+
 
 ?? ??? 2012, PHP 5.4.6
 
