--- a/NEWS
+++ b/NEWS
@@ -70,6 +70,9 @@ PHP                                                                        NEWS
 - pgsql
   . Added pg_escape_literal() and pg_escape_identifier() (Yasuo)
 
+- Tokenizer:
+  . Fixed bug #60097 (token_get_all fails to lex nested heredoc). (Nikita Popov)
+
 - Zip:
   . Upgraded libzip to 0.10.1 (Anatoliy)
 
