--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.4.7
 
 - Core:
+  . Fixed bug #62844 (parse_url() does not recognize //). (Andrew Faulds).
   . Fixed bug #62763 (register_shutdown_function and extending class).
     (Laruence)
   . Fixed bug #62725 (Calling exit() in a shutdown function does not return
