--- a/NEWS
+++ b/NEWS
@@ -38,6 +38,9 @@ PHP                                                                        NEWS
   . Fixed bug (segfault due to PS(mod_user_implemented) not be reseted 
     when close handler call exit). (Laruence)
 
+- SPL:
+  . Implemented FR #62840 (Add sort flag to ArrayObject::ksort). (Laruence)
+
 - Standard:
   . Fixed bug #62836 (Seg fault or broken object references on unserialize()).
     (Laruence)
